# data_visualizations

./: README.md  plots.py  pyproject.toml  requirements.txt
distvis/: aggregation_utils.py  categorical_utils.py  data_utils.py  distribution_utils.py  plots.py  special_types.py
notebooks/: adult_examples.ipynb  categorical_distance.ipynb  simple_examples.ipynb  strokes_examples.ipynb
notebooks/.ipynb_checkpoints/: simple_examples-checkpoint.ipynb
