[tool.poetry]
name = "distvis"
version = "0.1.4"
description = "Distribution of data visualizations for insights, feature engineering and debugging"
authors = ["milo.iturra <iturra.camilo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "plotly>=5.1.0", "pandas>=0.25.3", "scipy>=1.4.1", "numpy>=1.19.5", "statsmodels>=0.11.0"]
build-backend = "poetry.core.masonry.api"
