[tool.poetry]
name = "distvis"
version = "0.2.2"
description = "Distribution of data visualizations for insights, feature engineering and debugging"
authors = ["milo.iturra <iturra.camilo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "plotly==5.16.1", "pandas==2.0.3", "scipy==1.10.1", "numpy==1.24.4", "statsmodels==0.14.0", "nbformat>=4.2.0"]
build-backend = "poetry.core.masonry.api"